@@ -1,0 +1,6 @@
+IOPTRONSRC =  rot_ioptron.c rot_ioptron.h
+
+noinst_LTLIBRARIES = libhamlib-ioptron.la
+libhamlib_ioptron_la_SOURCES = $(IOPTRONSRC)
+
+EXTRA_DIST = Android.mk
