@@ -1,0 +1,31 @@
+/*
+ *  Hamlib Meade telescope rotor backend - main header
+ *  Copyright (c) 2018 by Andreas Mueller (DC1MIL)
+ *
+ *
+ *   This library is free software; you can redistribute it and/or
+ *   modify it under the terms of the GNU Lesser General Public
+ *   License as published by the Free Software Foundation; either
+ *   version 2.1 of the License, or (at your option) any later version.
+ *
+ *   This library is distributed in the hope that it will be useful,
+ *   but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ *   Lesser General Public License for more details.
+ *
+ *   You should have received a copy of the GNU Lesser General Public
+ *   License along with this library; if not, write to the Free Software
+ *   Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
+ *
+ */
+
+#ifndef _IOPTRON_H
+#define _IOPTRON_H 1
+
+#define BUFSIZE 128
+#define CR "\r"
+#define LF "\x0a"
+
+extern const struct rot_caps ioptron_caps;
+
+#endif /* _IOPTRON_H */
