@@ -82,6 +82,7 @@ DEFINE_INITROT_BACKEND(ether6);
 DEFINE_INITROT_BACKEND(cnctrk);
 DEFINE_INITROT_BACKEND(prosistel);
 DEFINE_INITROT_BACKEND(meade);
+DEFINE_INITROT_BACKEND(ioptron);
 
 /**
  *  \def ROT_BACKEND_LIST
@@ -119,6 +120,7 @@ static struct
     { ROT_CNCTRK, ROT_BACKEND_CNCTRK, ROT_FUNCNAMA(cnctrk) },
     { ROT_PROSISTEL, ROT_BACKEND_PROSISTEL, ROT_FUNCNAMA(prosistel) },
     { ROT_MEADE, ROT_BACKEND_MEADE, ROT_FUNCNAMA(meade) },
+    { ROT_IOPTRON, ROT_BACKEND_IOPTRON, ROT_FUNCNAMA(ioptron) },
     { 0, NULL }, /* end */
 };
 
